# openclaw-mission-control

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
scripts/: current-desktop-acceptance.mjs  desktop-acceptance-e2e.mjs  desktop-acceptance-focus.mjs  phase5-desktop-smoke.mjs  phase5b-desktop-acceptance.mjs  prepare-updater-release.mjs  probe-tauri-command.mjs  probe-tauri-openclaw-turn.mjs  publish-github-release.ps1  release-checklist.mjs  update-installed-app.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  AppDataContext.tsx  pages.tsx
src/components/agents/: AgentRosterGrid.tsx
src/components/approvals/: ApprovalCenter.tsx
src/components/businesses/: BusinessesWorkbench.tsx
src/components/dashboard/: ClarityBadge.tsx  DungeonPipeline.tsx  ExecutionReceiptsPanel.tsx  MetricCard.tsx  NowCommandCenter.tsx  TeamLeaderChat.tsx
src/components/guild/: GuildOffice.tsx
src/data/: mockData.ts
src/services/: agentService.ts  agentTrainingService.ts  approvalService.ts  experimentService.ts  intelligenceService.ts  obsidianService.ts  openclawService.ts  persistenceService.ts  productFileService.ts  productionService.ts  questService.ts  safetyPolicyService.ts  simulationService.ts  sqliteService.ts  tavilyService.ts  updaterService.ts  validationService.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: formatting.ts  markdown.ts  scoring.ts
tests/: mission-control.smoke.spec.ts
(+25 files in other folders)
