[package]
name = "openclaw-mission-control"
version = "0.1.35"
description = "OpenClaw Mission Control desktop MVP"
authors = ["OpenClaw"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "openclaw_mission_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }
